script file change
Script file change to allow both computers to use index.html file without the need to edit.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Link to external script file I created.-->
     <script src="file://C:/Users/aHob/Documents/GitHub/playObj/script.js"></script>
-<!--    <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>-->
+    <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>
   
 <style>
     h2{
@@ -27,7 +27,7 @@
 <div class="container-fluid">
   <div class = "row text-center">
   <div class = "col"></div>
-    <div class = "col-6 text-left">
+    <div class = "col-md-6 text-left">
 	<h2>function output to screen:</h2>
         
       <h4 class="output text-left"></h4>
