Script location addition

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Link to external script file I created.-->
     <script src="file://C:/Users/aHob/Documents/GitHub/playObj/script.js"></script>
     <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>
+    <script src="script.js"></script>
   
 <style>
     h2{
