Style and method improvements

--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <!-- Link to external script file I created.-->
-    <script src="file://C:/Users/aHob/Documents/GitHub/playObj/script.js"></script>
-<!--    <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>-->
+    <script src="file://C:/Users/aHob/Documents/GitHub/playObj/playObj/script.js"></script>
+<!--    <script src="file://C:/Users/A/Documents/GitHub/playObj/playObj/script.js"></script>-->
   
 <style>
-    h2{
-        margin: 50px;
-    } 
-    h4 {
-        margin: 40px;
-    }
+h2{
+    margin: 20px;
+} 
+h4 {
+    margin: 15px;
+}
+.displayArea{
+    padding: 25px 25px;
+    border-left: solid;
+    border-right: dotted;
+    border-bottom: dashed;
+}
+div{
+    padding: 15px 0px 0px 0px;
+}    
 </style>
 </head>
 	
@@ -27,8 +36,8 @@
 <div class="container-fluid">
   <div class = "row text-center">
   <div class = "col"></div>
-    <div class = "col-6 text-left">
-	<h2>function output to screen:</h2>
+    <div class = "col-6 text-left displayArea">
+	<h2>Function output:</h2>
         
       <h4 class="output text-left"></h4>
   
