--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ div{
     <div class = "col-6 text-left displayArea">
 	<h2>Function output:</h2>
         
-      <h4 class="output text-left"></h4>
+      <h4 id="output" class="text-left"></h4>
+        
+        <button>Clear output</button>
   
     </div>
   <div class = "col"></div>
