--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ div{
                   document.getElementById("output2").innerHTML = "new smallArr = " + arr.smallArr'
             >Add array</button>
         
-        <button onclick='document.getElementById("output").style.display = "none"'>Clear</button>
+        <button onclick='document.getElementById("output").style.display = "none";
+        document.getElementById("output2").style.display = "none"'>Clear</button>
   
     </div>
   <div class = "col"></div>
