I decided to take out the date script.

--- a/index.html
+++ b/index.html
@@ -41,28 +41,22 @@ div{
 <body>
 <div class="container-fluid">
   <div class = "row text-center">
-  <div class = "col"></div>
+    <div class = "col"></div>
 
         <div class = "col-6 text-left displayArea">
-        <h2>Function output:</h2>
+            <h2>Function output:</h2>
 
-        <h4 id="output" class="text-left"></h4>
-        <h4 id="output2" class="text-left"></h4>
+            <h4 id="output"></h4>
+            <h4 id="output2"></h4>
 
-        <button onclick='arr.makeAllOneNum(2)
-                    document.getElementById("output2").innerHTML =
-                    "new smallArr = " + arr.smallArr'>
-            Add array</button>
+            <button onclick='arr.makeAllOneNum(2)
+                        document.getElementById("output2").innerHTML =
+                        "new smallArr = " + arr.smallArr'>
+                Add array</button>
 
-        <button onclick='clrWork()'>Clear</button>
-
-            <script>
-                let d = new Date()
-                document.write('<h6>' + d + '</h6>')
-            </script>        
-
+            <button onclick='clrWork()'>Clear</button>
         </div>
-    <div class = "col"></div>
+      <div class = "col"></div>
     </div>
 </div> 
     
