--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <head>
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
-    <!-- jQuery  -->
+    <!-- jQuery  
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-    
+    -->
     <!--
      Link to external script file I created.
-    <script src="file://C:/Users/aHob/Documents/GitHub/playObj/playObj/script.js"></script>
+    <script src="file://C:/Users/aHob/Documents/GitHub/playObj/script.js"></script>
     <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>
     -->
-    
     <link rel="stylesheet" href="style.css">
 
     <script src="script.js"></script>
