Added a more complicated closure

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h4 id="output"></h4>
  
         <button onclick='arr.makeAllOneNum(2)
-                    document.getElementById("output2").innerHTML +=
-                    "<br/><br/>new smallArr = " + arr.smallArr'>
+                    document.getElementById("output2").innerHTML =
+                    "<br>new smallArr = " + arr.smallArr'>
             Add array</button>
         
         <h4 id="output2"></h4>
