Made buttons to hide certain sections of code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h4 id="output2"></h4>
         </aside>
         <footer class="footer">
-            <button onclick='clrWork()'>Clear</button>
+            <button onclick="document.getElementById('output').style.visibility='hidden'">Hide Main</button>
+            <button onclick="document.getElementById('output2').style.visibility='hidden'">Hide Side</button>
         </footer>
         <div class="filler"></div>        
     </div>
