--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <!-- Bootstrap 4 -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
-    <!-- jQuery  
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!-- jQuery from Google Content Delivery Network (CDN)
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     -->
     <!--
         Link to external script file I created.
