Changed code in all files to work with jQuery animation.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <!-- Bootstrap 4 -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
-    <!-- jQuery from Google Content Delivery Network (CDN)
+    <!-- jQuery from Google Content Delivery Network (CDN)    -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    -->
+
     <!--
         Link to external script file I created.
         <script src="file://C:/Users/aHob/Documents/GitHub/playObj/script.js"></script>
@@ -32,14 +32,9 @@
         </aside>
         <footer class="footer">
             <div>
-            <button onclick="document.getElementById('output').style.visibility='visible'">Main</button>
-            <button onclick="document.getElementById('output').style.visibility='hidden'">Hide Main</button>
+            <button id="tog">Toggle it</button>
+            <button id="anima">Move it</button>
             </div>
-            <div>
-            <button onclick="document.getElementById('output2').style.visibility='visible'">Side</button>   
-            <button onclick="document.getElementById('output2').style.visibility='hidden'">Hide Side</button>
-            </div>
-
         </footer>
         <div class="filler"></div>        
     </div>
