I started working with modules but found that they are not yet usable, in most browsers yet. I added an additional linked script tag to work.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="file://C:/Users/A/Documents/GitHub/playObj/script.js"></script>
     -->
     <link rel="stylesheet" href="style.css">
+    <script defer='true' src="lib.js"></script>
     <script defer='true' src="script.js"></script>
 </head>
 
@@ -20,7 +21,14 @@
     <div class="site">
         <h2 class="title">Function<br>output:</h2>
         <main class="main">
-            <h4 id="output"></h4>
+            <h4 id="output">
+                <pre>
+    Now is the <mark>time</mark> for all good
+    
+    men to be active in their lives for good.
+                </pre>
+
+            </h4>
         </main>
         <aside class="aside">
             <button onclick='arr.makeAllOneNum(2)
